<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Custom components</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Components</string>
    <string name="title_section1">Standard components</string>
    <string name="title_section2">Custom fonts</string>
    <string name="title_section3">Custom fonts (styled)</string>
    <string name="title_section4">Simple animation</string>
    <string name="title_section5">Code smells</string>
    <string name="title_section6">Drawing</string>
    <string name="ellipsis">…</string>
    <string name="send">Send</string>
    <string name="pangram">A very bad quack might jinx zippy fowls.</string>
    <string name="lipsum1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae lorem ut purus vehicula condimentum. Nam vestibulum rhoncus neque, eu vehicula libero fringilla vitae. Aliquam quis velit ligula. Praesent feugiat tellus et nunc commodo non tincidunt purus interdum. Aliquam venenatis venenatis tempor. Nulla enim orci, adipiscing posuere tincidunt vel, ultrices non felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nulla nulla, adipiscing imperdiet interdum id, tristique eu neque. Praesent eleifend aliquam erat, nec elementum enim lacinia quis. Phasellus lobortis purus sed neque molestie bibendum. Sed magna tellus, convallis non pulvinar nec, eleifend non tellus. Duis condimentum nisi non ante consectetur ornare egestas quis turpis. Phasellus placerat, neque id pharetra vestibulum, velit turpis ornare lacus, nec lacinia ligula quam id felis. Nam sed nisi lacus. Nulla eu turpis justo. In vitae enim non sem facilisis congue at at diam.</string>
    <string name="lipsum2">Maecenas venenatis venenatis sem, euismod rutrum massa rhoncus nec. Quisque velit dolor, lobortis eu scelerisque ac, porta eu eros. Ut tincidunt sollicitudin purus at cursus. Praesent hendrerit ullamcorper justo, a vulputate orci aliquet scelerisque. Curabitur dignissim neque id purus congue faucibus. Duis luctus dictum mi, non blandit justo pellentesque vehicula. Nullam placerat nisl a dui facilisis accumsan. Maecenas volutpat feugiat enim posuere consectetur. Aenean adipiscing leo ac nibh cursus molestie. Quisque consequat hendrerit elementum.</string>
    <string name="lipsum3">Nulla facilisi. Fusce ac varius nisl. Maecenas a iaculis tortor. Morbi porttitor diam id neque convallis sit amet rutrum massa ultricies. Quisque id orci et turpis accumsan lobortis sed eu neque. Aliquam non mattis dolor. Suspendisse facilisis pulvinar enim nec aliquet. Nam vulputate dolor mi. Vivamus adipiscing lectus quis est lacinia sed rhoncus mauris tincidunt. Curabitur posuere metus sit amet nulla euismod porttitor. Duis rhoncus bibendum mauris fringilla vehicula. Mauris interdum, lectus eu elementum dictum, purus ligula malesuada nibh, eu mollis odio tortor at ligula. Nulla dictum ligula eu odio ornare vitae iaculis purus tincidunt. In hac habitasse platea dictumst. Nam felis sapien, auctor ornare volutpat non, posuere in massa.</string>
    <string name="lipsum4">Vivamus suscipit hendrerit nisl at malesuada. In hac habitasse platea dictumst. Aenean at mi tellus. Vestibulum adipiscing tortor id ligula sagittis dictum luctus sed mauris. Duis ligula nibh, commodo vitae faucibus eu, sagittis et justo. Praesent suscipit felis eget mi cursus placerat. Nullam et odio urna, eu porta enim. Ut dui neque, cursus ac egestas vitae, laoreet sit amet tellus. Ut dapibus tincidunt erat, nec lobortis dolor porttitor sed.</string>
    <string name="lipsum5">In mi nunc, pellentesque nec ullamcorper sed, tincidunt id sapien. Praesent consectetur pharetra elit. Integer placerat nisl ut elit ullamcorper sed faucibus lectus hendrerit. In scelerisque justo vel est vestibulum eleifend. Maecenas dolor mi, sollicitudin vitae elementum ut, mollis eget lorem. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris vitae ligula turpis. Morbi condimentum consectetur arcu id tristique. Maecenas leo eros, gravida et ultricies in, euismod eget mi.</string>

</resources>