<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.pixplicity.mdevcon2013"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <com.pixplicity.mdevcon2013.widgets.FontTextView
            style="@style/SampleFontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lipsum1"
            android:textStyle="bold" />

        <com.pixplicity.mdevcon2013.widgets.FontTextView
            style="@style/SampleFontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lipsum2" />

        <com.pixplicity.mdevcon2013.widgets.FontTextView
            style="@style/SampleFontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lipsum3" />

        <com.pixplicity.mdevcon2013.widgets.FontTextView
            style="@style/SampleFontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lipsum4" />

        <com.pixplicity.mdevcon2013.widgets.FontTextView
            style="@style/SampleFontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lipsum5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.pixplicity.mdevcon2013.widgets.FontEditText
                style="@style/SampleFontText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:inputType="text"
                android:lines="1"
                android:scrollHorizontally="true" />

            <com.pixplicity.mdevcon2013.widgets.FontButton
                style="@style/SampleFontText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>